src/include/cephfs/libcephfs.h

struct ceph_mount_info;
struct ceph_dir_result;
struct snap_metadata {
  const char *key;
  const char *value;
};
struct snap_info {
  uint64_t id;
  size_t nr_snap_metadata;
  struct snap_metadata *snap_metadata;
};
struct ceph_snapdiff_entry_t {
  struct dirent dir_entry;
  uint64_t snapid; 
};
const char *ceph_version(int *major, int *minor, int *patch);
int ceph_create(struct ceph_mount_info **cmount, const char * const id);
typedef void *rados_t;
int ceph_create_from_rados(struct ceph_mount_info **cmount, rados_t cluster);
int ceph_init(struct ceph_mount_info *cmount);
int ceph_select_filesystem(struct ceph_mount_info *cmount, const char *fs_name);
int ceph_mount(struct ceph_mount_info *cmount, const char *root);
int64_t ceph_get_fs_cid(struct ceph_mount_info *cmount);
int ceph_mds_command(struct ceph_mount_info *cmount,
    const char *mds_spec,
    const char **cmd,
    size_t cmdlen,
    const char *inbuf, size_t inbuflen,
    char **outbuf, size_t *outbuflen,
    char **outs, size_t *outslen);
void ceph_buffer_free(char *buf);
int ceph_unmount(struct ceph_mount_info *cmount);
int ceph_abort_conn(struct ceph_mount_info *cmount);
void ceph_shutdown(struct ceph_mount_info *cmount);
int ceph_getaddrs(struct ceph_mount_info *cmount, char** addrs);
uint64_t ceph_get_instance_id(struct ceph_mount_info *cmount);
int ceph_conf_read_file(struct ceph_mount_info *cmount, const char *path_list);
int ceph_conf_parse_argv(struct ceph_mount_info *cmount, int argc, const char **argv);
int ceph_conf_set(struct ceph_mount_info *cmount, const char *option, const char *value);
int ceph_set_mount_timeout(struct ceph_mount_info *cmount, uint32_t timeout);
int ceph_conf_get(struct ceph_mount_info *cmount, const char *option, char *buf, size_t len);
int ceph_statfs(struct ceph_mount_info *cmount, const char *path, struct statvfs *stbuf);
int ceph_sync_fs(struct ceph_mount_info *cmount);
const char* ceph_getcwd(struct ceph_mount_info *cmount);
int ceph_chdir(struct ceph_mount_info *cmount, const char *path);
int ceph_opendir(struct ceph_mount_info *cmount, const char *name, struct ceph_dir_result **dirpp);
int ceph_closedir(struct ceph_mount_info *cmount, struct ceph_dir_result *dirp);
struct dirent * ceph_readdir(struct ceph_mount_info *cmount, struct ceph_dir_result *dirp);
struct ceph_snapdiff_info
{
  struct ceph_mount_info* cmount;
  struct ceph_dir_result* dir1;    
  struct ceph_dir_result* dir_aux; 
};
int ceph_open_snapdiff(struct ceph_mount_info* cmount,
                       const char* root_path,
                       const char* rel_path,
                       const char* snap1,
                       const char* snap2,
                       struct ceph_snapdiff_info* out);
int ceph_readdir_snapdiff(struct ceph_snapdiff_info* snapdiff,
                          struct ceph_snapdiff_entry_t* out);
int ceph_close_snapdiff(struct ceph_snapdiff_info* snapdiff);
void ceph_rewinddir(struct ceph_mount_info *cmount, struct ceph_dir_result *dirp);
int64_t ceph_telldir(struct ceph_mount_info *cmount, struct ceph_dir_result *dirp);
void ceph_seekdir(struct ceph_mount_info *cmount, struct ceph_dir_result *dirp, int64_t offset);
int ceph_mkdir(struct ceph_mount_info *cmount, const char *path, mode_t mode);
int ceph_mksnap(struct ceph_mount_info *cmount, const char *path, const char *name,
                mode_t mode, struct snap_metadata *snap_metadata, size_t nr_snap_metadata);
int ceph_rmsnap(struct ceph_mount_info *cmount, const char *path, const char *name);
int ceph_mkdirs(struct ceph_mount_info *cmount, const char *path, mode_t mode);
int ceph_rmdir(struct ceph_mount_info *cmount, const char *path);
int ceph_link(struct ceph_mount_info *cmount, const char *existing, const char *newname);
int ceph_readlink(struct ceph_mount_info *cmount, const char *path, char *buf, int64_t size);
int ceph_symlink(struct ceph_mount_info *cmount, const char *existing, const char *newname);
int ceph_unlink(struct ceph_mount_info *cmount, const char *path);
int ceph_rename(struct ceph_mount_info *cmount, const char *from, const char *to);
int ceph_fstatx(struct ceph_mount_info *cmount, int fd, struct ceph_statx *stx,
		unsigned int want, unsigned int flags);
int ceph_statx(struct ceph_mount_info *cmount, const char *path, struct ceph_statx *stx,
	       unsigned int want, unsigned int flags);
int ceph_setattrx(struct ceph_mount_info *cmount, const char *relpath, struct ceph_statx *stx, int mask, int flags);
int ceph_fsetattrx(struct ceph_mount_info *cmount, int fd, struct ceph_statx *stx, int mask);
int ceph_chmod(struct ceph_mount_info *cmount, const char *path, mode_t mode);
int ceph_lchmod(struct ceph_mount_info *cmount, const char *path, mode_t mode);
int ceph_fchmod(struct ceph_mount_info *cmount, int fd, mode_t mode);
int ceph_chown(struct ceph_mount_info *cmount, const char *path, uid_t uid, gid_t gid);
int ceph_fchown(struct ceph_mount_info *cmount, int fd, uid_t uid, gid_t gid);
int ceph_lchown(struct ceph_mount_info *cmount, const char *path, uid_t uid, gid_t gid);
int ceph_utime(struct ceph_mount_info *cmount, const char *path, struct utimbuf *buf);
int ceph_futime(struct ceph_mount_info *cmount, int fd, struct utimbuf *buf);
int ceph_utimes(struct ceph_mount_info *cmount, const char *path, struct timeval times[2]);
int ceph_lutimes(struct ceph_mount_info *cmount, const char *path, struct timeval times[2]);
int ceph_futimes(struct ceph_mount_info *cmount, int fd, struct timeval times[2]);
int ceph_futimens(struct ceph_mount_info *cmount, int fd, struct timespec times[2]);
int ceph_flock(struct ceph_mount_info *cmount, int fd, int operation,
	       uint64_t owner);
int ceph_mknod(struct ceph_mount_info *cmount, const char *path, mode_t mode, dev_t rdev);
int ceph_open(struct ceph_mount_info *cmount, const char *path, int flags, mode_t mode);
int ceph_close(struct ceph_mount_info *cmount, int fd);
int64_t ceph_lseek(struct ceph_mount_info *cmount, int fd, int64_t offset, int whence);
int ceph_read(struct ceph_mount_info *cmount, int fd, char *buf, int64_t size, int64_t offset);
int ceph_preadv(struct ceph_mount_info *cmount, int fd, const struct iovec *iov, int iovcnt,
           int64_t offset);
int ceph_write(struct ceph_mount_info *cmount, int fd, const char *buf, int64_t size,
	       int64_t offset);
int ceph_pwritev(struct ceph_mount_info *cmount, int fd, const struct iovec *iov, int iovcnt,
           int64_t offset);
int ceph_fsync(struct ceph_mount_info *cmount, int fd, int syncdataonly);
int ceph_fallocate(struct ceph_mount_info *cmount, int fd, int mode,
	                      int64_t offset, int64_t length);
int ceph_lazyio(struct ceph_mount_info *cmount, int fd, int enable);
int ceph_lazyio_propagate(struct ceph_mount_info *cmount, int fd, int64_t offset, size_t count);
int ceph_lazyio_synchronize(struct ceph_mount_info *cmount, int fd, int64_t offset, size_t count);
int ceph_getxattr(struct ceph_mount_info *cmount, const char *path, const char *name, 
	void *value, size_t size);
int ceph_fgetxattr(struct ceph_mount_info *cmount, int fd, const char *name,
	void *value, size_t size);
int ceph_lgetxattr(struct ceph_mount_info *cmount, const char *path, const char *name, 
	void *value, size_t size);
int ceph_listxattr(struct ceph_mount_info *cmount, const char *path, char *list, size_t size);
int ceph_flistxattr(struct ceph_mount_info *cmount, int fd, char *list, size_t size);
int ceph_llistxattr(struct ceph_mount_info *cmount, const char *path, char *list, size_t size);
int ceph_removexattr(struct ceph_mount_info *cmount, const char *path, const char *name);
int ceph_fremovexattr(struct ceph_mount_info *cmount, int fd, const char *name);
int ceph_lremovexattr(struct ceph_mount_info *cmount, const char *path, const char *name);
int ceph_setxattr(struct ceph_mount_info *cmount, const char *path, const char *name, 
	const void *value, size_t size, int flags);
int ceph_fsetxattr(struct ceph_mount_info *cmount, int fd, const char *name,
	const void *value, size_t size, int flags);
int ceph_lsetxattr(struct ceph_mount_info *cmount, const char *path, const char *name, 
	const void *value, size_t size, int flags);
int ceph_get_file_pool_name(struct ceph_mount_info *cmount, int fh, char *buf, size_t buflen);
int ceph_get_default_data_pool_name(struct ceph_mount_info *cmount, char *buf, size_t buflen);
int ceph_get_file_layout(struct ceph_mount_info *cmount, int fh, int *stripe_unit, int *stripe_count, int *object_size, int *pg_pool);
int ceph_get_file_replication(struct ceph_mount_info *cmount, int fh);
int ceph_get_path_replication(struct ceph_mount_info *cmount, const char *path);
int ceph_get_pool_id(struct ceph_mount_info *cmount, const char *pool_name);
int ceph_get_pool_replication(struct ceph_mount_info *cmount, int pool_id);
int ceph_debug_get_fd_caps(struct ceph_mount_info *cmount, int fd);
int ceph_debug_get_file_caps(struct ceph_mount_info *cmount, const char *path);
uint32_t ceph_get_cap_return_timeout(struct ceph_mount_info *cmount);
mode_t ceph_umask(struct ceph_mount_info *cmount, mode_t mode);
void ceph_set_uuid(struct ceph_mount_info *cmount, const char *uuid);
void ceph_set_session_timeout(struct ceph_mount_info *cmount, unsigned timeout);
int ceph_get_snap_info(struct ceph_mount_info *cmount,
                       const char *path, struct snap_info *snap_info);
void ceph_free_snap_info_buffer(struct snap_info *snap_info);